# programming-technologies

./: README.md
task-bash/: README.md  run.sh
task-ci-cd/: .gitlab-ci.yml  README.md
task-cmake/: CMakeLists.txt  README.md
task-cmake/A/: preparing.py
task-cmake/B/: CMakeLists.txt  lib.cpp  lib.h
task-cmake/C/: main.cpp  main_test.cpp
task-git/: README.md
task-testing-python/: README.md  main.py
task-testing-python/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
task-testing-python/tests/test_02/: test_size_tree.py  test_tree.py
task-testing-python/tests/test_03/: test_weather.py
task0/: README.md
